openai adapter and exploration first pass

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ dist/
 # Data directory contents (keep structure, ignore runtime data)
 packages/engine/data/content/*
 packages/engine/data/trees/*
+packages/engine/data/*.json
 !packages/engine/data/content/.gitkeep
 !packages/engine/data/trees/.gitkeep
 !packages/engine/data/config.example.json
