--- a/packages/engine/data/config.OpenAIexample.json
+++ b/packages/engine/data/config.OpenAIexample.json
@@ -4,6 +4,7 @@
   "llm": {
     "adapter": "openai",
     "model": "gpt-4.1-mini",
+    "basicModel": "gpt-5-nano",
     "apiKey": "sk-proj-...",
     "timeoutMs": 15000
   },
@@ -15,10 +16,36 @@
   "trees": [
     {
       "id": "notes",
-      "name": "Cloud Notes",
-      "organizingPrinciple": "Universal Knowledge Base",
+      "name": "Master Notes",
+      "organizingPrinciple": "Universal Knowledge Base. Organized by Domain (Tech/Personal), Project, and Status.",
       "autoPlace": true,
-      "dogma": { "strictness": "strict" }
+      "placementStrategy": "Sort into 'Active Projects', 'Reference', 'Archives', or 'Journal'. Create new sub-categories if topic is novel.",
+      "dogma": {
+        "strictness": "strict",
+        "forbiddenConcepts": ["marketing fluff", "generic filler"],
+        "requiredContext": ["context", "timestamp if available"]
+      }
+    },
+    {
+      "id": "conversations",
+      "name": "Infinite Context Log",
+      "organizingPrinciple": "Episodic Narrative. Organized Hierarchically by: 1. Epoch/Year, 2. Session/Project Thread, 3. Interaction Phase (e.g., 'Problem Statement', 'Exploration', 'Resolution').",
+      "autoPlace": true,
+      "placementStrategy": "Place chronologically under the active Session ID. If the conversation shifts topic significantly, create a new Phase node under the same Session. Do NOT merge distinct sessions.",
+      "dogma": {
+        "strictness": "fanatical",
+        "forbiddenConcepts": [
+          "generic summaries (e.g., 'discussed various options')",
+          "omitting code blocks or specific configuration values",
+          "merging distinct dissenting arguments into a single consensus",
+          "losing the chronological order of events"
+        ],
+        "requiredContext": [
+          "The specific User Intent",
+          "The Decision State (Agreed/Pending/Rejected)",
+          "Unique identifiers (File names, Error codes, Variable names)"
+        ]
+      }
     }
   ],
   "ingestion": {
