packaging a fkt binary so you can add it to your git repo and tell claude code to use fkt commands

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -2,6 +2,9 @@
   "name": "@fraktag/engine",
   "version": "0.1.0",
   "type": "module",
+  "bin": {
+    "fkt": "./dist/cli.js"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
