--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -13,12 +13,11 @@
     "test": "vitest"
   },
   "dependencies": {
-    "pdf-parse": "^2.4.5",
+    "unpdf": "^1.4.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "@types/pdf-parse": "^1.1.5",
     "@types/uuid": "^9.0.0",
     "typescript": "^5.3.0",
     "vitest": "^1.0.0"
