tree audit using expert model

--- a/packages/engine/data/config.OLLAMAexample.json
+++ b/packages/engine/data/config.OLLAMAexample.json
@@ -5,6 +5,7 @@
     "adapter": "ollama",
     "model": "qwen3-coder-128k",
     "basicModel": "deepseek-coder-v2:lite",
+    "expertModel": "gpt-oss:120b",
     "endpoint": "http://localhost:11434"
   },
   "trees": [
