additional components to facilitate deployment (public and enterprise)

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,5 +21,8 @@
     "@fraktag/engine": "file:../engine",
     "cors": "^2.8.5",
     "express": "^5.2.1"
+  },
+  "optionalDependencies": {
+    "aws-jwt-verify": "^4.0.0"
   }
 }
