--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,7 +18,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@fraktag/engine": "file:../engine",
+    "@fraktag/engine": "*",
     "cors": "^2.8.5",
     "express": "^5.2.1"
   },
