--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -8,8 +8,8 @@
     "build:worker": "esbuild src/ingestion-worker.ts --bundle --platform=node --target=node20 --outfile=dist/ingestion-worker.js --external:@aws-sdk/*"
   },
   "dependencies": {
-    "@fraktag/api": "workspace:*",
-    "@fraktag/engine": "workspace:*",
+    "@fraktag/api": "*",
+    "@fraktag/engine": "*",
     "@aws-sdk/client-dynamodb": "^3.500.0",
     "@aws-sdk/lib-dynamodb": "^3.500.0",
     "@aws-sdk/client-s3": "^3.500.0",
