--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "aws-cdk-lib": "^2.120.0",
     "constructs": "^10.3.0",
-    "@fraktag/functions": "workspace:*"
+    "@fraktag/functions": "*"
   },
   "devDependencies": {
     "aws-cdk": "^2.120.0",
