allows parallel AI calls to speed up knowledge base searches

--- a/packages/engine/data/config.OpenAIexample.json
+++ b/packages/engine/data/config.OpenAIexample.json
@@ -4,8 +4,8 @@
   "llm": {
     "adapter": "openai",
     "model": "gpt-4.1-mini",
-    "basicModel": "gpt-4.1-nano",
-    "expertModel": "gpt-5",
+    "basicModel": "gpt-4.1-mini",
+    "expertModel": "gpt-4.1",
     "apiKey": "sk-proj-...",
     "timeoutMs": 60000
   },
