--- a/packages/engine/data/config.OpenAIexample.json
+++ b/packages/engine/data/config.OpenAIexample.json
@@ -7,6 +7,7 @@
     "basicModel": "gpt-4.1-mini",
     "expertModel": "gpt-4.1",
     "apiKey": "sk-proj-...",
+    "contextWindow": 250000,
     "timeoutMs": 60000
   },
   "embedding": {
